--- a/Stage 4 .ipynb
+++ b/Stage 4 .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Stage - IV (Dashboard)"
+    "## Opiod Mortality Dashboard"
    ]
   },
   {
